[gd_scene load_steps=6 format=3 uid="uid://1sv847wif744"]

[ext_resource type="Texture2D" uid="uid://c6l13j8aomemj" path="res://assets/enviroment/backgrounds/default_background.png" id="1_7h7up"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_m8lbu"]

[sub_resource type="Animation" id="Animation_psvn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.498039)]
}

[sub_resource type="Animation" id="Animation_fem7o"]
resource_name = "default"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.498039)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i424n"]
_data = {
"RESET": SubResource("Animation_psvn4"),
"default": SubResource("Animation_fem7o")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m8lbu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i424n")
}

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("1_7h7up")
offset = Vector2(640, 360)

[node name="PauseMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="PanelContainer" parent="PauseMargin"]
custom_minimum_size = Vector2(288, 403.2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ContextMargin" type="MarginContainer" parent="PauseMargin/PausePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContextContainer" type="VBoxContainer" parent="PauseMargin/PausePanel/ContextMargin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="PauseLabel" type="Label" parent="PauseMargin/PausePanel/ContextMargin/ContextContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1
uppercase = true

[node name="ButtonContainer" type="VBoxContainer" parent="PauseMargin/PausePanel/ContextMargin/ContextContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitToMenuButton" type="Button" parent="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="QuitToDesktopButton" type="Button" parent="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="pressed" from="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
[connection signal="pressed" from="PauseMargin/PausePanel/ContextMargin/ContextContainer/ButtonContainer/QuitToDesktopButton" to="." method="_on_quit_to_desktop_button_pressed"]
